syntax = "proto3";

package com.auticuro.proto;

option java_multiple_files = true;
option java_package = "com.auticuro.proto";
option java_outer_classname = "WalletProto";

// Account service for managing accounts
service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse);
  rpc LockAccount (LockAccountRequest) returns (LockAccountResponse);
  rpc UnlockAccount (UnlockAccountRequest) returns (UnlockAccountResponse);
  rpc UpdateAccountLimits (UpdateAccountLimitsRequest) returns (UpdateAccountLimitsResponse);
}

// Transfer service for balance operations
service TransferService {
  rpc Transfer (TransferRequest) returns (TransferResponse);
  rpc BatchTransfer (BatchTransferRequest) returns (BatchTransferResponse);
}

// Account related messages
message CreateAccountRequest {
  string account_number = 1;
  string asset_type = 2;
  string upper_limit = 3;
  string lower_limit = 4;
}

message CreateAccountResponse {
  bool success = 1;
  string error = 2;
  Account account = 3;
}

message GetAccountRequest {
  string account_number = 1;
}

message GetAccountResponse {
  bool success = 1;
  string error = 2;
  Account account = 3;
}

message LockAccountRequest {
  string account_number = 1;
}

message LockAccountResponse {
  bool success = 1;
  string error = 2;
}

message UnlockAccountRequest {
  string account_number = 1;
}

message UnlockAccountResponse {
  bool success = 1;
  string error = 2;
}

message UpdateAccountLimitsRequest {
  string account_number = 1;
  string upper_limit = 2;
  string lower_limit = 3;
}

message UpdateAccountLimitsResponse {
  bool success = 1;
  string error = 2;
}

// Transfer related messages
message TransferRequest {
  string transaction_id = 1;
  string from_account = 2;
  string to_account = 3;
  string amount = 4;
  string asset_type = 5;
  map<string, string> metadata = 6;
}

message TransferResponse {
  bool success = 1;
  string error = 2;
  string transaction_id = 3;
}

message BatchTransferRequest {
  string batch_id = 1;
  repeated TransferRequest transfers = 2;
}

message BatchTransferResponse {
  bool success = 1;
  string error = 2;
  string batch_id = 3;
  repeated TransferResponse transfer_results = 4;
}

// Common messages
message Account {
  string account_number = 1;
  string asset_type = 2;
  string balance = 3;
  string upper_limit = 4;
  string lower_limit = 5;
  bool locked = 6;
  int32 version = 7;
  string create_time = 8;
  string update_time = 9;
}
